--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,27 +1,68 @@
 body {
-  font: 10pt Arial;
-  background: #e1e1db;
-  color: #262626;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 750px;
+  align-items: center;
+  background: linear-gradient(-45deg, #210242, #9198e5);
+  display: flex;
+  font-family: sans-serif;
+  height: 100vh;
+  justify-content: center;
+  margin: 0;
+  width: 100vw;
+}
+.card {
+  background: white;
+  top:20px;
+  border-radius: 12px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  height: 80%;
+  overflow: hidden;
+  padding: 20px;
+  position: relative;
+  width: 80%;
+}
+.title {
+  font-size: 1.5em;
+  height: 29px;
+  margin-bottom: 0;
 }
 
-h1 {
-  color: #737480;
-  text-align: center;
-  height: 50px;
-  font-size: 22pt;
+.card.saving .line2 {
+  animation: 4s 500ms Rotate forwards;
 }
-
-h2 {
-  font-size: 16pt;
+.card.done .line2 {
+  animation: 500ms ScaleDown forwards;
 }
-
-p {
+.form {
+  transform-origin: 0 50%;
+  transition: transform 500ms, opacity 500ms;
 }
-
-li {
+.card.saving .form {
+  transform: translateY(-16px) scale(.8);
+}
+.card.done .form {
+  transform: translateY(-16px) scale(.8);
+  opacity: 0;
+}
+.input {
+  background: transparent;
+  border: 0;
+  box-sizing: border-box;
+  font-size: 20px;
+  height: 40px;
+  margin-top: 20px;
+  outline: none !important;
+  position: relative;
+  width: 300px;
+}
+@keyframes Rotate {
+  0% { transform: rotate(0); opacity: 1; }
+  25% { transform: rotate(360deg); opacity: 1; }
+  50% { transform: rotate(720deg); opacity: 1; }
+  75% { transform: rotate(1080deg); opacity: 1; stroke-dasharray: 6 48; stroke-dashoffset: -42;}
+  100% { transform: rotate(1080deg); opacity: 1; stroke-dashoffset: 0; stroke-dasharray: 36 48;}
+}
+@keyframes ScaleDown {
+  0% { transform: scale(1); }
+  100% { transform: scale(0);}
 }
 
 td {
@@ -31,7 +72,7 @@ td {
 
 table {
   table-layout: fixed;
-  width: 350px;
+  width: 500px;
   color: #262626;
   text-align: left;
   background: #fafafa;
@@ -41,28 +82,40 @@ table {
 }
 
 footer {
-  font-size: 8pt;
+  font-size: 10pt;
   text-align: center;
 }
 
 section#input {
-  height: 90px
+  height: 110px
 }
 
 section#formula {
-  height: 140px;
-  width: 150%
+  height: 180px;
+  width: 200%
 }
 
 section#info {
-  border-top: 1px grey solid;
+  top:10%;
 }
 
 section#footer {
   position:fixed;
   left:0px;
-  bottom:0px;
+  bottom:8%;
   width:100%;
+}
+
+h1 {
+  color: #FFFFFF;
+  position:fixed;
+  top: 0%;
+  font-size: 22pt;
+}
+
+h5 {
+  color:#AA3333;
+  text-align: center;
 }
 
 .row {
